# 2CoBel

./: CMakeLists.txt  Doxyfile  Doxyfile.in  Evidence.cpp  Evidence.h  LICENSE.txt  README.md
algorithms/: EvidentialAlgorithms.cpp  EvidentialAlgorithms.h
builders/: DefaultFocalElementArrayBuilderDispatcher.cpp  DefaultFocalElementArrayBuilderDispatcher.h  DefaultFocalElementContainerDispatcher.cpp  DefaultFocalElementContainerDispatcher.h  FocalElementArrayBuilder.h  FocalElementArrayBuilderDispatcher.h  FocalElementContainer.h  GenericFocalElementArrayBuilder.cpp  GenericFocalElementArrayBuilder.h  GenericFocalElementContainer.cpp  GenericFocalElementContainer.h  GraphBuilder.cpp  GraphBuilder.h  HashableFocalElementArrayBuilder.cpp  HashableFocalElementArrayBuilder.h  HashableFocalElementContainer.cpp
canonical_decomposition/: CanonicalDecompositionDispatcher.h  CanonicalDecompositionStrategy.h  DefaultCanonicalDecompositionDispatcher.cpp  DefaultCanonicalDecompositionDispatcher.h  GraphBasedCanonicalDecompositon.cpp  GraphBasedCanonicalDecompositon.h  UnidimensionalCanonicalDecomposition.cpp  UnidimensionalCanonicalDecomposition.h
containers/: DefaultFocalElementContainerDispatcher.cpp  DefaultFocalElementContainerDispatcher.h  FocalElementContainer.h  FocalElementContainerDispatcher.h  GenericFocalElementContainer.cpp  GenericFocalElementContainer.h  HashableFocalElementContainer.cpp  HashableFocalElementContainer.h
demos/: CMakeLists.txt  clipper_demo.cpp  poly_toy.cpp  unidimensional_demo.cpp
docs/: doxygen_sqlite3.db
docs/html/: BoxSet2DFocalElement_8cpp.html  BoxSet2DFocalElement_8cpp__incl.map  BoxSet2DFocalElement_8cpp__incl.md5  BoxSet2DFocalElement_8h.html  BoxSet2DFocalElement_8h__dep__incl.map  BoxSet2DFocalElement_8h__dep__incl.md5  BoxSet2DFocalElement_8h__incl.map  BoxSet2DFocalElement_8h__incl.md5  BoxSet2DFocalElement_8h_source.html  Clipper2DFocalElement_8cpp.html  Clipper2DFocalElement_8cpp__incl.map  Clipper2DFocalElement_8cpp__incl.md5  Clipper2DFocalElement_8h.html  Clipper2DFocalElement_8h__dep__incl.map  Clipper2DFocalElement_8h__dep__incl.md5  Clipper2DFocalElement_8h__incl.map  Clipper2DFocalElement_8h__incl.md5  Clipper2DFocalElement_8h_source.html  ClipperPolygon_8cpp.html  ClipperPolygon_8cpp__incl.map  ClipperPolygon_8cpp__incl.md5  ClipperPolygon_8h.html  ClipperPolygon_8h__dep__incl.map  ClipperPolygon_8h__dep__incl.md5  ClipperPolygon_8h__incl.map  ClipperPolygon_8h__incl.md5  ClipperPolygon_8h_source.html  CompositeFocalElement_8cpp.html  CompositeFocalElement_8cpp__incl.map  CompositeFocalElement_8cpp__incl.md5  CompositeFocalElement_8h.html  CompositeFocalElement_8h__dep__incl.map  CompositeFocalElement_8h__dep__incl.md5  CompositeFocalElement_8h__incl.map  CompositeFocalElement_8h__incl.md5  CompositeFocalElement_8h_source.html  ConstructorArgumentsError_8h.html  ConstructorArgumentsError_8h__dep__incl.map  ConstructorArgumentsError_8h__dep__incl.md5  ConstructorArgumentsError_8h__incl.map  (+281 more)
docs/html/search/: all_0.html  all_0.js  all_1.html  all_1.js  all_10.html  all_10.js  all_11.html  all_11.js  all_12.html  all_12.js  all_13.html  all_13.js  all_14.html  all_14.js  all_2.html  all_2.js  all_3.html  all_3.js  all_4.html  all_4.js  all_5.html  all_5.js  all_6.html  all_6.js  all_7.html  all_7.js  all_8.html  all_8.js  all_9.html  all_9.js  all_a.html  all_a.js  all_b.html  all_b.js  all_c.html  all_c.js  all_d.html  all_d.js  all_e.html  all_e.js  (+110 more)
docs/latex/: BoxSet2DFocalElement_8cpp.tex  BoxSet2DFocalElement_8cpp__incl.md5  BoxSet2DFocalElement_8h.tex  BoxSet2DFocalElement_8h__dep__incl.md5  BoxSet2DFocalElement_8h__incl.md5  Clipper2DFocalElement_8cpp.tex  Clipper2DFocalElement_8cpp__incl.md5  Clipper2DFocalElement_8h.tex  Clipper2DFocalElement_8h__dep__incl.md5  Clipper2DFocalElement_8h__incl.md5  ClipperPolygon_8cpp.tex  ClipperPolygon_8cpp__incl.md5  ClipperPolygon_8h.tex  ClipperPolygon_8h__dep__incl.md5  ClipperPolygon_8h__incl.md5  CompositeFocalElement_8cpp.tex  CompositeFocalElement_8cpp__incl.md5  CompositeFocalElement_8h.tex  CompositeFocalElement_8h__dep__incl.md5  CompositeFocalElement_8h__incl.md5  ConstructorArgumentsError_8h.tex  ConstructorArgumentsError_8h__dep__incl.md5  ConstructorArgumentsError_8h__incl.md5  DefaultFocalElementContainerDispatcher_8cpp.tex  DefaultFocalElementContainerDispatcher_8cpp__incl.md5  DefaultFocalElementContainerDispatcher_8h.tex  DefaultFocalElementContainerDispatcher_8h__dep__incl.md5  DefaultFocalElementContainerDispatcher_8h__incl.md5  EigenMat2DFocalElement_8cpp.tex  EigenMat2DFocalElement_8cpp__incl.md5  EigenMat2DFocalElement_8h.tex  EigenMat2DFocalElement_8h__dep__incl.md5  EigenMat2DFocalElement_8h__incl.md5  Evidence_8cpp.tex  Evidence_8cpp__incl.md5  Evidence_8h.tex  Evidence_8h__dep__incl.md5  Evidence_8h__incl.md5  FocalElementContainerDispatcher_8h.tex  FocalElementContainerDispatcher_8h__dep__incl.md5  (+116 more)
errors/: ConstructorArgumentsError.h  IllegalArgumentError.h  IncompatibleTypeError.h  InvalidBBAError.h
focal_elements/: BoxSet2DFocalElement.cpp  BoxSet2DFocalElement.h  Clipper2DFocalElement.cpp  Clipper2DFocalElement.h  CompositeFocalElement.cpp  CompositeFocalElement.h  ConflictFocalElement.h  EigenMat2DFocalElement.cpp  EigenMat2DFocalElement.h  FocalElement.h  HashableFocalElement.h  UnidimensionalFocalElement.cpp  UnidimensionalFocalElement.h
geometry/: ClipperPolygon.cpp  ClipperPolygon.h  Point2D.h  Rectangle.cpp  Rectangle.h  Shape.h
plotters/: CMakeLists.txt  ClipperPolygonPlotter.cpp  ClipperPolygonPlotter.h
plotters/matplotlib-cpp-master/: matplotlibcpp.h
plotters/matplotlib-cpp-master/contrib/: CMakeLists.txt
plotters/matplotlib-cpp-master/examples/: animation.cpp  basic.cpp  fill_inbetween.cpp  minimal.cpp  modern.cpp  nonblock.cpp  xkcd.cpp
